--- a/barra-navegacao.html
+++ b/barra-navegacao.html
@@ -77,6 +77,36 @@
         </nav>
 
         <h2>Barra de navegação com menu responsivo</h2>
+
+     <!--<nav class="navbar navbar-expand-xl navbar-dark bg-dark"> -->     <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
+    <!--<nav class="navbar navbar-expand-md navbar-dark bg-dark"> -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <!-- Logo -->
+            <a href="" class="navbar-brand">Chalé Hotel</a>
+
+            <!-- Menu Hamburguer -->
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Navegação -->
+            <!--<div class="collapse navbar-collapse"> -->
+                <div class="collapse navbar-collapse" id="navegacao">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Sobre</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Serviços</a>
+                    </li>
+                </ul>   
+            </div> 
+        </nav>
         
 
 
