--- a/font-awesome.html
+++ b/font-awesome.html
@@ -9,6 +9,8 @@
 
         <title>Bootstrap - Font awesome</title>
 
+        <script src="https://kit.fontawesome.com/7f1782fa99.js" crossorigin="anonymous"></script>
+
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,6 +33,9 @@
         <!-- <i class="fas fa-arrow-up display-3 text-success"></i> --> 
         <i class="fas fa-battery-half display-3 text-danger"></i>
         <span class="fas fa-bomb display-3 text-warning"></span>
+        <span class="fas fa-user display-3 text-warning"></span>
+        <i class="fas fa-house display-3 text-warning"></i>
+        <i class="fas fa-image display-3 text-dark"></i>
 
        <!-- <button  class="btn btn-danger btn-lg">
           <i class="fas fa-bomb"></i>
